<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:fillViewport="true" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="vertical"
        android:padding="30dp" >

        <TextView
            android:id="@+id/medicalhistoryTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/medicalhistoryTextView"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="#000000"
            android:textSize="30sp"
            android:textStyle="bold"
            android:typeface="monospace" />

        <ImageView
            android:id="@+id/ivTakePhoto"
            android:layout_width="259dp"
            android:layout_height="0dp"
            android:layout_weight="0.46"
            android:layout_gravity="center_horizontal"
            android:contentDescription="@string/capturedImage"
            android:src="@drawable/abc_ab_share_pack_holo_dark" />

        

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/dateTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.5"
                android:text="@string/dateTextView"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#000000"
                android:textStyle="bold"
                android:typeface="monospace" />

            <EditText
                android:id="@+id/dateEditText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2.5"
                android:ems="10"
                
                android:hint="@string/dateEditText"
                android:inputType="date"
                android:textColor="#000000" >
            </EditText>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/doctorTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.5"
                android:text="@string/doctorTextView"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#000000"
                android:textStyle="bold"
                android:typeface="monospace" />

            <EditText
                android:id="@+id/doctorEditText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2.5"
                android:ems="10"
                android:hint="@string/doctorEditText"
                android:inputType="numberDecimal"
                android:textColor="#000000" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/purposeTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.5"
                android:text="@string/purposeTextView"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#000000"
                android:textStyle="bold"
                android:typeface="monospace" />

            <EditText
                android:id="@+id/purposeEditText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2.5"
                android:ems="10"
                android:hint="@string/purposeEditText"
                android:inputType="textMultiLine"
                android:textColor="#000000" />
        </LinearLayout>

        
    </LinearLayout>

</ScrollView>