<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scrollView1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="5dp"
        android:background="#ffffff"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/addDietTextView"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/addDietTextView"
                android:textColor="#000000"
                android:textSize="25sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/feastNameTextView"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginBottom="5dp"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="@string/feastNameText"
                android:textColor="#000000" />

            <EditText
                android:id="@+id/dietNameEditText"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginBottom="10dp"
                android:layout_weight="2"
                android:background="@drawable/layout_background"
                android:hint="@string/feastNameView"
                android:inputType="text"
                android:paddingBottom="5dp"
                android:paddingLeft="5dp"
                android:paddingTop="5dp"
                android:textColor="#000000"
                android:typeface="monospace" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/menuTextView"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginBottom="5dp"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="@string/menuText"
                android:textColor="#000000"
                android:typeface="monospace" />

            <EditText
                android:id="@+id/menuEditText"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginBottom="10dp"
                android:layout_weight="2"
                android:background="@drawable/layout_background"
                android:hint="@string/menuView"
                android:inputType="text"
                android:paddingBottom="5dp"
                android:paddingLeft="5dp"
                android:paddingTop="5dp"
                android:textColor="#000000"
                android:typeface="monospace" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/pickDayTextView"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginBottom="5dp"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="@string/pickDayTextView"
                android:textColor="#000000"
                android:typeface="monospace" />

            <EditText
                android:id="@+id/dateEditText"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginBottom="10dp"
                android:layout_weight="2"
                android:background="@drawable/layout_background"
                android:hint="@string/dateEditText"
                android:inputType="text"
                android:paddingBottom="5dp"
                android:paddingLeft="5dp"
                android:paddingTop="5dp"
                android:textColor="#000000"
                android:typeface="monospace" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/pickTimeTextView"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginBottom="5dp"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="@string/pickTimeTextView"
                android:textColor="#000000"
                android:typeface="monospace" />

            <EditText
                android:id="@+id/timeEditText"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginBottom="10dp"
                android:layout_weight="2"
                android:background="@drawable/layout_background"
                android:hint="@string/timeEditText"
                android:inputType="text"
                android:paddingBottom="5dp"
                android:paddingLeft="5dp"
                android:paddingTop="5dp"
                android:textColor="#000000"
                android:typeface="monospace" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="4"
            android:orientation="vertical" >

            <CheckBox
                android:id="@+id/alarmSetCheckBox"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/alarmCheckBox"
                android:textColor="#000000"
                android:typeface="monospace" />

            <Button
                android:id="@+id/addDietChartButton"
                android:layout_width="175dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="30dp"
                android:background="#333333"
                android:onClick="createDiet"
                android:text="@string/addDietChartButton"
                android:textColor="#ffffff"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>