<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scrollView1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#ffffff"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="4"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textCreateProfileHeader"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="2"
                android:gravity="center"
                android:text="this is test"
                android:textColor="#000000"
                android:textSize="25sp"
                android:textStyle="bold"
                android:typeface="monospace" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="9"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/textName"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="2.5"
                    android:paddingLeft="15dp"
                    android:text="@string/textName"
                    android:textColor="#000000"
                    android:textSize="15sp"
                    android:typeface="monospace" />

                <EditText
                    android:id="@+id/editName"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="3"
                    android:hint="@string/hintName"
                    android:inputType="text"
                    android:paddingLeft="15dp"
                    android:textColor="#000000"
                    android:textSize="15sp"
                    android:typeface="monospace" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/textGender"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="2.5"
                    android:paddingLeft="15dp"
                    android:text="@string/textGender"
                    android:textColor="#000000"
                    android:textSize="15sp"
                    android:typeface="monospace" />

                <RadioGroup
                    android:id="@+id/radioGroup1"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="3"
                    android:paddingLeft="15dp" >

                    <RadioButton
                        android:id="@+id/radioButtonMale"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="true"
                        android:text="@string/radioButtonMale"
                        android:typeface="monospace" />

                    <RadioButton
                        android:id="@+id/radioButtonFemale"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/radioButtonFemale"
                        android:typeface="monospace" />
                </RadioGroup>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/textBloodGroup"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="2.5"
                    android:paddingLeft="15dp"
                    android:text="@string/textBloodGroup"
                    android:textColor="#000000"
                    android:textSize="15sp"
                    android:typeface="monospace" />

                <EditText
                    android:id="@+id/editBloodGroup"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="3"
                    android:hint="@string/hintBloodGroup"
                    android:inputType="number"
                    android:paddingLeft="15dp"
                    android:textColor="#000000"
                    android:textSize="15sp"
                    android:typeface="monospace" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/textAge"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="2.5"
                    android:paddingLeft="15dp"
                    android:text="@string/textAge"
                    android:textColor="#000000"
                    android:textSize="15sp"
                    android:typeface="monospace" />

                <EditText
                    android:id="@+id/editAge"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="3"
                    android:hint="@string/hintAge"
                    android:inputType="number"
                    android:paddingLeft="15dp"
                    android:textColor="#000000"
                    android:textSize="15sp"
                    android:typeface="monospace" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/textWeight"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="2.5"
                    android:paddingLeft="15dp"
                    android:text="@string/textWeight"
                    android:textColor="#000000"
                    android:textSize="15sp"
                    android:typeface="monospace" />

                <EditText
                    android:id="@+id/editWeight"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="3"
                    android:hint="@string/hintWeight"
                    android:inputType="number"
                    android:paddingLeft="15dp"
                    android:textColor="#000000"
                    android:textSize="15sp"
                    android:typeface="monospace" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/textHeight"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="2.5"
                    android:paddingLeft="15dp"
                    android:text="@string/textHeight"
                    android:textColor="#000000"
                    android:textSize="15sp"
                    android:typeface="monospace" />

                <EditText
                    android:id="@+id/editHeight"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="3"
                    android:hint="@string/hintHeight"
                    android:inputType="number"
                    android:paddingLeft="15dp"
                    android:textColor="#000000"
                    android:textSize="15sp"
                    android:typeface="monospace" />
            </LinearLayout>
        </LinearLayout>

        <Button
            android:id="@+id/buttonSubmit"
            android:layout_width="162dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="20dp"
            android:background="#607D8B"
            android:text="@string/buttonSubmit"
            android:textColor="#ffffff"
            android:textStyle="bold"
            android:typeface="monospace" />
    </LinearLayout>

</ScrollView>